--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Music_project"
         tools:targetApi="31">
         <activity
+            android:name=".FirebaseActivity"
+            android:exported="true" />
+        <activity
             android:name=".SubActivity"
             android:exported="false" />
         <activity
